--- a/Vocabulous/src/home-view.html
+++ b/Vocabulous/src/home-view.html
@@ -27,7 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card"> 
       <h1>Home View</h1>
-      <p>Diese Seite gibt dem Schüler/Studenten einen guten Überblick. Die wichtigsten Informationen werden kurz und präzise angezeigt.</p>
+      <p>Diese Seite gibt dem Schüler/Studenten einen guten Überblick. Die wichtigsten Informationen werden hier angezeigt.</p>
     </div>
   </template>
 
