--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -171,7 +171,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 35px;
       }
       .buttons{
-        font-size: 10px;
+        font-size: 0.65em;
         margin-left: 40px;
       }
     </style>
