--- a/Vocabulous/src/shared-styles.html
+++ b/Vocabulous/src/shared-styles.html
@@ -16,7 +16,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
       .card {
         margin: 24px;
-        padding: 16px;
+        padding-right: 40px;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        padding-left: 16px;
         color: #757575;
         border-radius: 5px;
         background-color: #fff;
