--- a/Vocabulous/src/unit-overview.html
+++ b/Vocabulous/src/unit-overview.html
@@ -28,47 +28,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 500;
         font-size: 23px;
       }
-      paper-search-panel{
-        margin-left: 40px;
+      paper-search-bar{
+        margin: 40px;
         margin-top: 50px;
-        width: 96.5%;
-        padding-bottom: 30px;
+        width: 97%;
+        /*padding-bottom: 30px;*/
       }
-      paper-search-panel::-ms-clear{
-        margin-left: 40px;
+      paper-search-bar::-ms-clear{
+        margin: 40px;
         margin-top: 50px;
         display:none;
       }
       table{
-        margin-left: 40px;
-        width: 96.5%;
+        width: 100%;
       }
-      /*td{
-        border: 0.5px solid #cecece;
-        height: 15px;
-        padding: 10px;
-        text-align: left;
-        font-weight: 500;
-        margin-left: 40px;
-        border-radius: 5px;
-        
-      }*/
+     
       td{
         border: 0.5px solid #cecece;
         height: 30px;
         padding: 10px;
         text-align: left;
         font-weight: 500;
-        /*margin-left: 40px;*/
+        margin-left: 40px;
         border-radius: 5px;
         margin-bottom: 3px;
         display: block;
       }
     </style>
-    <!--<paper-search-bar search="{{search}}" loading="[[loading]]" hide-filter-button></paper-search-bar>-->
+
     <div class="card">
       <h1>Units</h1>
-      <paper-search-panel search="{{search}}" loading="[[loading]]" hide-filter-button noResultsText></paper-search-panel>
+      <paper-search-bar search="{{search}}" loading="[[loading]]" hide-filter-button></paper-search-bar>
       <table id="units">
 
       </table>
