--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -246,6 +246,9 @@
       _getIronPages(){
         return Polymer.dom(this.root).querySelector("iron-pages");
       }
+      _getPracticeUnitPage(){
+        return Polymer.dom(this.root).querySelector("practiceunit-page[name=practiceunit-page]");
+      }
       _pageChanged(page) {
         // Load page import on demand. Show 404 page if fails
         var resolvedPageUrl = this.resolveUrl(page + '.html');
