--- a/old/src/settings-view.html
+++ b/old/src/settings-view.html
@@ -217,7 +217,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-swatch-picker-color-size: 10px;
       }
       .buttons{
-        font-size: 10px;
+        font-size: 0.65em;
         margin-left: 40px;
       }
       paper-dropdown-menu{
