--- a/Vocabulous/src/shared-styles.html
+++ b/Vocabulous/src/shared-styles.html
@@ -42,6 +42,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin: 16px 0;
         color: #212121;
         font-size: 22px;
+        font-weight: 400;
+      }
+      p{
+        font-weight: 300;
       }
     </style>
   </template>
