--- a/old/src/unit-overview.html
+++ b/old/src/unit-overview.html
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return Polymer.dom(this.root).querySelector("table[id=units]");
       }
       _getSearchBar(){
-        return Polymer.dom(this.root).querySelector("paper-search-panel");
+        return Polymer.dom(this.root).querySelector("paper-search-bar");
       }
       _getChecked(){
         return Polymer.dom(this.root).querySelector("input[name=forUnit]");
