--- a/Vocabulous/src/selfcheck-page.html
+++ b/Vocabulous/src/selfcheck-page.html
@@ -106,6 +106,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 0%;
         margin-top: 80px;
       }
+      paper-button.startbutton{
+        font-size: 0.65em;
+        width: 8%;
+        height: 30px;
+        margin-left: 0%;
+        margin-top: 80px;
+      }
       paper-progress.green {
         --paper-progress-active-color: var(--paper-light-green-500);
         --paper-progress-secondary-color: var(--paper-light-green-100);
@@ -174,6 +181,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <table>
         <tr>
           <td><paper-button class="cancelbutton" name="cancelbutton" raised noink>Cancel</paper-button></td>
+          <td><paper-button class="skipbutton" name="skipbutton" noink raised>Skip</paper-button></td>
+          <td><paper-button class="startbutton" name="startbutton" noink raised>Start</paper-button></td>
           <td><h2 class="timer">00:00:00</time-counter></td>
         </tr>
       </table>
@@ -188,9 +197,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getCancelButton(){
         return Polymer.dom(this.root).querySelector("paper-button[name=cancelbutton]");
-      }
-      _getPauseButton(){
-        return Polymer.dom(this.root).querySelector("paper-button[name=pausebutton]");
       }
       _getSkipButton(){
         return Polymer.dom(this.root).querySelector("paper-button[name=skipbutton]");
@@ -215,6 +221,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getNextButton(){
         return Polymer.dom(this.root).querySelector("paper-button[class=nextVocab]");
+      }
+      _getStartButton(){
+        return Polymer.dom(this.root).querySelector("paper-button[name=startbutton]");
+      }
+      _getReturnButton(){
+        return Polymer.dom(this.root).querySelector("paper-icon-button[name=backicon]");
       }
     }
     window.customElements.define(SelfCheckPage.is, SelfCheckPage);
