--- a/old/src/overview-page.html
+++ b/old/src/overview-page.html
@@ -75,6 +75,7 @@
 
       paper-button {
         font-size: 15px;
+        font-weight: 300;
       }
 
       .drawer-list {
@@ -89,12 +90,17 @@
         text-decoration: none;
         color: var(--app-secondary-color);
         line-height: 40px;
+        font-weight: 300;
       }
 
       .drawer-list a.iron-selected {
         color: var(--navigationcolorfont);
         font-weight: bold;
         background-color: var(--navigationcolorbackground);
+      }
+      div.maintitle{
+        font-weight: 300;
+        margin-left: 20px;
       }
 
      
@@ -115,7 +121,7 @@
     <app-drawer-layout fullbleed force-narrow>
       <!-- Drawer content -->
       <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
-            <app-toolbar>Menu</app-toolbar>
+            <app-toolbar style="font-weight:300">Menu</app-toolbar>
             <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
               <a name="home-view">Home</a>
               <a name="unit-overview">Unit Overview</a>
@@ -131,8 +137,8 @@
         <app-header slot="header" fixed condenses effects="waterfall">
             
           <app-toolbar>
-              <paper-icon-button name="menuicon" icon="my-icons:menu"></paper-icon-button>
-            <div main-title>Vocabulous</div>
+            <paper-icon-button name="menuicon" icon="my-icons:menu" noink></paper-icon-button>
+            <div class="maintitle" main-title>Vocabulous</div>
             <paper-button name="user">Max Mustermann </paper-button> <!--User Account Button -->
             <paper-icon-button name="accounticon" icon="vaadin:user" class="user"></paper-icon-button> <!--User Account Button -->
             <paper-button name="logout">Log out</paper-button> <!--Log out Button -->
