--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -33,7 +33,9 @@
 <link rel="lazy-import" href="practiceunit-page.html">
 <link rel="lazy-import" href="selfcheck-page.html">
 <link rel="lazy-import" href="not-found.html">
+<link rel="lazy-import" href="create-unit.html">
 <link rel="lazy-import" href="register-login.html">
+<link rel="lazy-import" href="unitresult-page.html">
 <link rel="lazy-import" href="my-app.html">
 
 <dom-module id="overview-page">
@@ -124,10 +126,11 @@
             <app-toolbar style="font-weight:300">Menu</app-toolbar>
             <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
               <a name="home-view">Home</a>
-              <a name="unit-overview">Unit Overview</a>
+              <a name="unit-overview">Units</a>
+              <a name="create-unit">Create Unit</a>
               <a name="statistics-view">Statistics</a>
               <a name="messages-view">Messages</a>
-              <a name="settings-view">Settings</a> 
+              <a name="settings-view">Settings</a>
             </iron-selector>
             
         </app-drawer>
@@ -159,6 +162,8 @@
           <not-found name="not-found"></not-found>
           <practiceunit-page name="practiceunit-page"></practiceunit-page>
           <selfcheck-page name="selfcheck-page"></selfcheck-page>
+          <create-unit name="create-unit"></create-unit>
+          <unitresult-page name="unitresult-page"></unitresult-page>
         </iron-pages>
       </app-header-layout>
       
@@ -203,6 +208,9 @@
       }
       _getUnitoverview(){
         return Polymer.dom(this.root).querySelector("a[name=unit-overview]");
+      }
+      _getCreateunit(){
+        return Polymer.dom(this.root).querySelector("a[name=create-unit]");
       }
       _getStatisticview(){
         return Polymer.dom(this.root).querySelector("a[name=statistics-view]");
