--- a/Vocabulous/src/selfcheck-page.html
+++ b/Vocabulous/src/selfcheck-page.html
@@ -74,8 +74,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 15px;
         margin-top: 20px;
         --paper-toggle-button-checked-bar-color:  #1E88E5;
-      --paper-toggle-button-checked-button-color: #1E88E5;
-      --paper-toggle-button-checked-ink-color: #1E88E5;
+        --paper-toggle-button-checked-button-color: #1E88E5;
+        --paper-toggle-button-checked-ink-color: #1E88E5;
+        --paper-toggle-button-unchecked-bar-color:  #ff3399;
+        --paper-toggle-button-unchecked-button-color: #ff3399;
+        --paper-toggle-button-unchecked-ink-color: #ff3399;
       }
       paper-button.nextVocab{
         font-size: 0.65em;
@@ -153,6 +156,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-top: -49px;
         position:absolute;
       }
+      iron-icon.language{
+        color: var(--app-secondary-color);
+        width: 15px;
+        height: 15px;
+        margin-top: 15px;
+        margin-left: 10px;
+      }
+      iron-icon.next{
+        color: var(--app-secondary-color);
+        width: 15px;
+        height: 15px;
+        margin-top: -80px;
+        margin-left: 80%;
+      }
+      #popuplanguage iron-icon.language{
+        display: none;
+      }
+      #popuplanguage{
+        position: absolute;
+        z-index: 1;
+        width: 500px;
+        background-color: rgba(134, 221, 255, 0.562);
+        color:black;
+        padding: 5px 0;
+        margin-top: 4.5%;
+      }
+      #popuplanguage::after{
+        content: "";
+        position: absolute;
+        bottom: 100%;
+        left: 48.5%;
+        margin-top: -4px;
+        border-width: 7px;
+        border-style: solid;
+        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
+      }
     </style>
 
     <div class="card">
@@ -162,31 +201,36 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <tr>
           <td><h3 class="german">Deutsch</h3></td>
           <td><paper-toggle-button noink checked class="language"></paper-toggle-button></td>
-          <td> <h3 class="english">Englisch</h3></td>
+          <td> <h3 class="english">Englisch</h3></td>          
+          <td><iron-icon icon="vaadin:info-circle-o" class="language"></iron-icon></td>
+          <div id="popuplanguage" name="languagePopup" style="display: none">When you're selecting "german" you will have to
+              write german words and when you select "english" you will have to write
+              english words.</div>
         </tr>
       </table>
       <div class="progressbars">
           <paper-progress name="learn" value="250" min="0" max="800" class="green"></paper-progress>
           <h3 class="learnprogress">Learn Progress</h3>
           
-          <paper-progress name="unit" value="50" min="0" max="100" class="blue"></paper-progress>
+          <paper-progress name="unit" value="0" min="0" max="100" class="blue"></paper-progress>
           <h3 class="unitprogress">Unit Progress</h3>
       </div>
       <div>
-          <paper-button class="nextVocab" name="nextVocab" raised noink>Next</paper-button>
-          <h2>house</h2> <!--Vokabel das angezeigt wird-->
-          <paper-input class="vocab"></paper-input> <!--Vokabel das eingegeben wird-->
-      </div>
+          <paper-button hidden="true" class="nextVocab" name="nextVocab" raised noink>Next</paper-button>
+          <h2 hidden="true" >house</h2> <!--Vokabel das angezeigt wird-->
+          <paper-input hidden="true" class="vocab"></paper-input> <!--Vokabel das eingegeben wird-->          
       
       <table>
         <tr>
-          <td><paper-button class="cancelbutton" name="cancelbutton" raised noink>Exit</paper-button></td>
-          <td><paper-button class="skipbutton" name="skipbutton" noink raised>Skip</paper-button></td>
+          <td><paper-button hidden="true" class="cancelbutton" name="cancelbutton" raised noink>Exit</paper-button></td>
+          <td><paper-button hidden="true" class="skipbutton" name="skipbutton" noink raised>Skip</paper-button></td>
           <td><paper-button class="startbutton" name="startbutton" noink raised>Start</paper-button></td>
-          <td><h2 class="timer">00:00:00</time-counter></td>
+          <td><h2 hidden="true" class="timer">00:00:00</time-counter></td>
         </tr>
       </table>
     </div>
+    <input name="wordCount" style="display:none;">
+    <input name="wrong" style="display:none;">
   </template>
   
   <script>
@@ -227,6 +271,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getReturnButton(){
         return Polymer.dom(this.root).querySelector("paper-icon-button[name=backicon]");
+      }
+      _getLanguageInfo(){
+        return Polymer.dom(this.root).querySelector("iron-icon[class=language]");
+      }
+      _getLanguagePupup(){
+        return Polymer.dom(this.root).querySelector("div[name=languagePopup]");
+      }
+      _getWordCount(){
+        return Polymer.dom(this.root).querySelector("input[name=wordCount]");
+      }
+      _getWrong(){
+        return Polymer.dom(this.root).querySelector("input[name=wrong]");
       }
     }
     window.customElements.define(SelfCheckPage.is, SelfCheckPage);
