--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -266,6 +266,9 @@
       _getSelfCheckPage(){
         return Polymer.dom(this.root).querySelector("selfcheck-page[name=selfcheck-page]");
       }
+      _getUnitResultPage(){
+        return Polymer.dom(this.root).querySelector("unitresult-page[name=unitresult-page]");
+      }
       _pageChanged(page) {
         // Load page import on demand. Show 404 page if fails
         var resolvedPageUrl = this.resolveUrl(page + '.html');
