--- a/old/src/selfcheck-page.html
+++ b/old/src/selfcheck-page.html
@@ -180,7 +180,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       
       <table>
         <tr>
-          <td><paper-button class="cancelbutton" name="cancelbutton" raised noink>Cancel</paper-button></td>
+          <td><paper-button class="cancelbutton" name="cancelbutton" raised noink>Exit</paper-button></td>
           <td><paper-button class="skipbutton" name="skipbutton" noink raised>Skip</paper-button></td>
           <td><paper-button class="startbutton" name="startbutton" noink raised>Start</paper-button></td>
           <td><h2 class="timer">00:00:00</time-counter></td>
